fix(styles): restore missing background image on landing and login pages

--- a/styles/layouts/_login.scss
+++ b/styles/layouts/_login.scss
@@ -11,6 +11,7 @@
     inset: 0;
     z-index: 0;
     filter: grayscale(100%);
+    background-image: url('/architectural-concrete-monument.png');
     background-size: cover;
     background-position: center;
     background-color: #d4d4d4;
